# Cpp-High-Performance-Second-Edition

./: .clang-format  CMakeLists.txt  README.md
Chapter01/: CMakeLists.txt
Chapter02/: CMakeLists.txt  lambda_capture.cpp  move_semantics.cpp
Chapter02/benchmarking/: CMakeLists.txt
Chapter02/benchmarks/: CMakeLists.txt  lambda_vs_stdfunction_benchmark.cpp
Chapter03/: CMakeLists.txt  binary_search.cpp
Chapter03/benchmarking/: CMakeLists.txt  complexity.cpp
Chapter03/benchmarks/: CMakeLists.txt
Chapter04/: CMakeLists.txt  cache_thrashing.cpp  parallel_arrays.cpp
Chapter05/: CMakeLists.txt  everyday_problems.cpp  generic_algorithms.cpp  grid.cpp  sorting.cpp  standard_algorithm_features.cpp
Chapter05/benchmarks/: CMakeLists.txt  find_bm.cpp  sorting_bm.cpp
Chapter06/: CMakeLists.txt  materialize_views.cpp  range_views.cpp  span.cpp  string_view.cpp  student.cpp  understanding_views.cpp
Chapter07/: CMakeLists.txt  alignment.cpp  arena.h  arena.hpp  operator_new.cpp  placement_new.cpp  polymorphic-memory-allocators.cpp  short_alloc.cpp  user_arena.cpp
Chapter08/: CMakeLists.txt  compile_time_hash.cpp  constraints_and_concepts.cpp  point2d_concepts.cpp  point2d_unconstrained.cpp  safe_cast.cpp  type_traits.cpp
Chapter09/: CMakeLists.txt  example_projections.cpp  example_reflection.h  example_reflection_concepts.cpp  heterogenous_container_of_variants.cpp  optional.cpp  tuple_algorithms.cpp
Chapter10/: CMakeLists.txt  length_proxy.h  pipe_operator.cpp  string_concat_proxy_tests.cpp  vec2d_length_proxy.h  vec2d_length_proxy_tests.cpp
Chapter10/benchmarks/: CMakeLists.txt  string_concat_proxy_bm.cpp  vec2d_length_proxy_bm.cpp
Chapter11/: CMakeLists.txt  async.cpp  atomic_references.cpp  atomics.cpp  avoid_deadlock.cpp  barriers.cpp  condition_variables.cpp  counter_atomic.cpp  counter_data_race.cpp  counter_mutex.cpp  future_and_promises.cpp  joinable_thread.cpp  latches.cpp  lock_free_queue.cpp  print_thread_id.cpp  semaphores.cpp  stop_token.cpp  tasks.cpp
Chapter12/: CMakeLists.txt  dangling_references.cpp  generator.h  generator_example.cpp  index_compression_example.cpp  initial_example.cpp  lin_space_callback.cpp  lin_space_coroutine.cpp  lin_space_eager.cpp  lin_space_iterator.cpp  lin_space_ranges.cpp  lin_value.h  passing_coroutines_around.cpp  resumable.h  resumable_minimal_example.cpp
Chapter13/: CMakeLists.txt  asio_server.cpp  asio_timer_callback.cpp  asio_timer_coro.cpp  chapter_13.h  sync_wait.h  task.h  task_ex.cpp
Chapter14/: copy_if_tests.cpp  count_if.cpp  index_based_loop.cpp  parallel_policy.cpp  transform.h
Chapter14/benchmarks/: CMakeLists.txt  copy_if_bm.cpp  transform_divide_and_conquer_bm.cpp  transform_naive_bm.cpp
